crates/strider/tests/snapshots/v3__aarch64be__calling_convention__sink16.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "7" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "9" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x3c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "15" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0xffffffffffffffdc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "18" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="arg[7] ← w7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "22" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="arg[6] ← w6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xffffffffffffffe4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "26" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="arg[5] ← w5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "30" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="arg[4] ← w4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "34" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="arg[3] ← w3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "38" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="arg[2] ← w2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "42" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "46" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "3" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x34:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "54" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "55" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x2c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "59" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "60" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x24:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "64" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x1c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "66" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "68" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x14:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "70" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "72" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "72" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0xc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "74" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "76" -> "75" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "76" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "74" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "78" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "79" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "80" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "81" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "82" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "83" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
